Add sub-level Makefile system.
This commit adds a make include file, allowing path info to be
centralized in one place. Makefiles now exist at several levels, all of
them backreferencing the `environment.mk` file at the top-level.

--- a/test/jacobi/Makefile
+++ b/test/jacobi/Makefile
@@ -1,10 +1,13 @@
-OMP_INSTALL=/opt/openmp-install
+include ../../environment.mk
 
 jacobi: jacobi.c
-	gcc -fopenmp -I${OMP_INSTALL}/include -g $^ -o $@ -lm
+	gcc -fopenmp -I$(OMP_BASE_PATH)/include -g $^ -o $@ -lm
 
 objdump:
 	objdump -d jacobi > jacobi.objdump
+
+test:
+	LD_PRELOAD=$(OMP_LIB_PATH)/libomp.so:$(VISUOMP_LIB_PATH)/libvisuomp.so ./jacobi 2048 2048
 
 clean:
 	rm jacobi
