Fix path bug in test makefiles.
This commit fixes a naming bug. I had forgotten to migrate the test
example Makefiles forward to the "pinsight" name, and thus they could
not find the PInsight library to load during tests.

--- a/test/jacobi/Makefile
+++ b/test/jacobi/Makefile
@@ -7,7 +7,7 @@ objdump:
 	objdump -d jacobi > jacobi.objdump
 
 test:
-	LD_PRELOAD=$(OMP_LIB_PATH)/libomp.so:$(VISUOMP_LIB_PATH)/libpinsight.so ./jacobi 2048 2048
+	LD_PRELOAD=$(OMP_LIB_PATH)/libomp.so:$(PINSIGHT_LIB_PATH)/libpinsight.so ./jacobi 2048 2048
 
 clean:
 	rm jacobi
