update trace_experiment.sh script to do callback tracing

--- a/test/jacobi/Makefile
+++ b/test/jacobi/Makefile
@@ -1,7 +1,7 @@
 include ../../environment.mk
 
 jacobi: jacobi.c
-	gcc -fopenmp -I$(OMP_BASE_PATH)/include -g $^ -o $@ -lm
+	clang -fopenmp -g -finstrument-functions -I$(OMP_BASE_PATH)/include -g $^ -o $@ -lm
 
 objdump:
 	objdump -d jacobi > jacobi.objdump
