Two important features are added in this commit: 1) CUDA tracing support through CUPTI. CUPTI callback can calls LTTng-ust tracepoint so trace is recorded in LTTng.2) Dynamic tracing is implemneted so tracing for each region can be turned on/off or setting samping rate at the runtime.

--- a/test/jacobi/Makefile
+++ b/test/jacobi/Makefile
@@ -1,7 +1,8 @@
 include ../../environment.mk
 
 jacobi: jacobi.c
-	clang -fopenmp -g -finstrument-functions -I$(OMP_BASE_PATH)/include -g $^ -o $@ -lm
+	#clang -fopenmp -g -finstrument-functions -I$(OMP_BASE_PATH)/include -g $^ -o $@ -lm
+	clang -fopenmp -g -I$(OMP_BASE_PATH)/include -g $^ -o $@ -lm
 
 objdump:
 	objdump -d jacobi > jacobi.objdump
