fixing the uncommitted files, trace.sh script and test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,10 @@ if (PINSIGHT_OPENMP)
 #    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     # if not hardcode here, should be set in cmake as -DOMPLIB_INSTALL=/home/yanyh/tools/llvm-openmp-install
     # only omp.h and ompt.h are needed for building
-    set(OMPLIB_INSTALL "/home/yyan7/tools/llvm-openmp-install" CACHE PATH
-            "Path to OMPT-capable OpenMP runtime installation that has omp.h and ompt.h under include folder")
+    set(OPENMP_INCLUDE_PATH "/home/yyan7/tools/llvm-openmp-install/include" CACHE PATH
+            "Path to an include folder that contains omp.h and ompt.h headers for OpenMP support")
 
-    include_directories(${OMPLIB_INSTALL}/include)
+    include_directories(${OPENMP_INCLUDE_PATH})
     list(APPEND SOURCE_FILES
             src/ompt_lttng_tracepoint.h
             src/ompt_callback.c
@@ -102,7 +102,7 @@ install(TARGETS pinsight
 message("============================================================")
 if (PINSIGHT_OPENMP)
     message("Build with OpenMP Support:     TRUE")
-    message("    OMPLIB_INSTALL: ${OMPLIB_INSTALL}")
+    message("    OPENMP_INCLUDE_PATH: ${OPENMP_INCLUDE_PATH}")
 else()
     message("Build with OpenMP Support:     FALSE")
 endif()
