add read to target

--- a/experiment/llvm-openmp-target/Makefile
+++ b/experiment/llvm-openmp-target/Makefile
@@ -5,6 +5,11 @@ helloomp: helloomp.c
 targetomp:targetomp.c
 	clang -fopenmp -fopenmp-targets=nvptx64-nvidia-cuda  -I. -I${LLVM_INSTALL}/include -L${LLVM_INSTALL}/lib -g $^ -o $@ -lm -lomp
 
+target:target.c
+	clang -fopenmp -fopenmp-targets=nvptx64-nvidia-cuda  -I. -I${LLVM_INSTALL}/include -L${LLVM_INSTALL}/lib -g $^ -o $@ -lm -lomp
+
+task:task.c
+	clang -fopenmp -I. -I${LLVM_INSTALL}/include -L${LLVM_INSTALL}/lib -g $^ -o $@ -lm -lomp
 clean:
 	rm helloomp 
 	rm targetomp
