--- a/experiment/llvm-openmp-task/Makefile
+++ b/experiment/llvm-openmp-task/Makefile
@@ -1,6 +1,10 @@
 LLVM_INSTALL=/home/xinyao/tools/llvm-openmp-install
 task: task.c
 	clang -fopenmp -I. -I${LLVM_INSTALL}/include -L${LLVM_INSTALL}/lib -g $^ -o $@ -lm -lomp
+	
+task_depend: task_depend.c
+	clang -fopenmp -I. -I${LLVM_INSTALL}/include -L${LLVM_INSTALL}/lib -g $^ -o $@ -lm -lomp
 
 clean:
-	rm helloomp
+	rm task
+	rm task_depend
