--- a/eva/spec_omp2012-1.1/Ubuntu-linux-x86_64-gcc-gfortran.cfg
+++ b/eva/spec_omp2012-1.1/Ubuntu-linux-x86_64-gcc-gfortran.cfg
@@ -43,20 +43,20 @@ hw_vendor    = System Vendor Name
 
 # CPU description
 
-hw_cpu	     = Intel Xeon  E7-8837
+hw_cpu	     = Intel(R) Xeon(R) W-2133 CPU @ 3.60GHz
 hw_cpu_mhz   = 9999
 hw_ncpu      = 9999
 
 # Tester description - edit the date, put your license number here!
 
-test_date       = Apr-9999
+test_date       = June-2021
 license_num     = 0
-prepared_by     = You (your_email@example.com)
+prepared_by     = Yonghong Yan (yyan7@uncc.edu)
 display_order   = 1a
 
 # Operating system, file system
 
-sw_os           = SLES11 SP1
+sw_os           = Ubuntu 18.04
 sw_file         = Default
 
 ######################################################################
@@ -64,11 +64,15 @@ sw_file         = Default
 # before any instances of "default="
 tune		= base
 ext		= ubuntu_x86
-check_md5	= yes
+teeout          = yes
+teerunout       = yes
+check_md5	= no
+strict_rundir_verify = 0
 env_vars	= yes
 mean_anyway = 1
 use_submit_for_speed = 1
-submit = dplace -x2 $command
+submit = $command
+submit = /home/yyan7/tools/pinsight/scripts/trace.sh /home/yyan7/benchmarks/spec_omp2012-1.1/install/traces/md md /home/yyan7/tools/pinsight/build/libpinsight.so /opt/llvm-install/llvm-20201103/lib  $command
 
 
 ####################################################################
@@ -77,17 +81,20 @@ submit = dplace -x2 $command
 
 ####################################################################
 default=default=default=default:
-CC	= gcc 
+CC	= cc 
+CC	= clang -g 
 FC	= gfortran
 CXX     = g++
+CXX     = clang++ -g
 
 
 #######################################################################
 # Baseline Optimization
 # 
-COPTIMIZE = -O3 -fopenmp -mcmodel=medium
+COPTIMIZE = -g -O3 -fopenmp -mcmodel=medium
 CXXOPTIMIZE = -O3 -fopenmp -mcmodel=medium
 FOPTIMIZE = -O3 -fopenmp -mcmodel=medium
+FOPTIMIZE = -O3 -fopenmp -mcmodel=medium -L/opt/llvm-install/llvm-20210620/lib -lomp
 
 #######################################################################
 #
