update the 64-bit UUID to be 32:32 for codeptr:counter

--- a/test/jacobi/Makefile
+++ b/test/jacobi/Makefile
@@ -2,7 +2,7 @@ include ../environment.mk
 
 jacobi: jacobi.c
 	#clang -fopenmp -g -finstrument-functions -I$(OMP_BASE_PATH)/include -g $^ -o $@ -lm
-	clang -fopenmp -g -I$(OMP_BASE_PATH)/include -g $^ -o $@ -lm
+	clang -fopenmp -g -I$(OMP_BASE_PATH)/include -g -lomp -L/home/yyan7/compiler/llvm-project-install/lib $^ -o $@ -lm
 
 objdump:
 	objdump -d jacobi > jacobi.objdump
