[Backtrace]: Initial support for adding backtrace ip to a trace record so we can use backtrace to recover callstack in source code. In this commit, only initial support are implemented and not yet full tested. It can include backtrace in a OMPT trace record.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCE_FILES
         src/lexgion_trace_config.h
         src/pinsight.h
         src/pinsight.c
+        src/backtrace.c
         src/enter_exit.c
         src/enter_exit_lttng_ust_tracepoint.h
         )
