--- a/experiment/lttng_cupti/Makefile
+++ b/experiment/lttng_cupti/Makefile
@@ -1,5 +1,5 @@
 CUDA_INSTALL=/usr/local/cuda
-CUPTI_INSTALL=${CUDA_INSTALL}/extras/CUPTI
+CUPTI_INSTALL=${CUDA_INSTALL}
 
 CFLAGS+=-DPINSIGHT_MPI -DPINSIGHT_OPENMP -g
 INCLUDES=-I${CUPTI_INSTALL}/include -I${CUDA_INSTALL}/include -I.
