Now both contextId and streamId are recorded in the trace record. We use boxing to walk around the limitation of having max 10 args in the LTTNG_UST_TRACEPOINT_EVENT definition.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,10 @@ endif()
 ## CUDA support, which requires cupti
 if (PINSIGHT_CUDA)
     # CUPTI install location needs to be provided, which could be part of CUDA SDK install or a standaline install
-    set(CUDA_INSTALL "/usr/local/cuda" CACHE PATH "CUDA SDK install path that includes CUPTI under extras/CUPTI folder" )
-    set(CUPTI_INSTALL ${CUDA_INSTALL}/extras/CUPTI)
+    set(CUDA_INSTALL "/usr/local/cuda" CACHE PATH "CUDA SDK install path " )
+    set(CUPTI_INSTALL ${CUDA_INSTALL})
+    # Older version of CUDA has CUPTI installed under extras/CUPTI folder
+    #set(CUPTI_INSTALL ${CUDA_INSTALL}/extras/CUPTI)
 
     include_directories(${CUPTI_INSTALL}/include ${CUDA_INSTALL}/include)
     #list(APPEND PINSIGHT_EXTERNAL_LIBS cupti)
