Improving backtrace support, and now the cuda_codeptr is the instruction pointer of the location right after the actual CUDA call is made in the user program. It is discovered by looking at the backtrace and find out which address/level is for user program, and then we use gcc __builtin_return_address with the level to return the IP.

--- a/experiment/backtrace/Makefile
+++ b/experiment/backtrace/Makefile
@@ -1,6 +1,8 @@
 
 backtrace:
-	gcc backtrace.c -ldl -g -o $@ -lunwind
+	gcc backtrace.c -g -o backtrace
+	gcc backtrace_dlinfo.c -ldl -g -o backtrace_dlinfo
+	gcc backtrace_libunwind.c -g -o backtrace_libunwind -lunwind
 
 clean:
-	rm a.out backtrace
+	rm backtrace backtrace_dlinfo backtrace_libunwind
