--- a/test/Makefile
+++ b/test/Makefile
@@ -1,11 +1,15 @@
 include environment.mk
 
+
 # List of test case folders.
 TEST_CASES = hello jacobi lulesh
 
 .PHONY: $(TEST_CASES)
 
 all: build test
+
+vecaddcuda: vecadd.cu
+	nvcc -g $< -o $@ -lcuda
 
 build:
 	$(foreach dir, $(TEST_CASES), $(MAKE) -C $(dir);)
