--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ if (PINSIGHT_CUDA)
     set(CUDA_INSTALL "/usr/local/cuda" CACHE PATH "CUDA SDK install path " )
     set(CUPTI_INSTALL ${CUDA_INSTALL})
     # Older version of CUDA has CUPTI installed under extras/CUPTI folder
-    #set(CUPTI_INSTALL ${CUDA_INSTALL}/extras/CUPTI)
+    set(CUPTI_INSTALL ${CUDA_INSTALL}/extras/CUPTI)
 
     include_directories(${CUPTI_INSTALL}/include ${CUDA_INSTALL}/include)
     #list(APPEND PINSIGHT_EXTERNAL_LIBS cupti)
