Refactor trace config parser and enhance section handling
- Implement `trace_config_parse.c` and header to modularize parsing logic.
- Restructure `parse_section_header` to strictly handle four formats:
  1. [Domain.default]
  2. [Lexgion.default] (New: supports global defaults)
  3. [Domain.Punit]
  4. [Lexgion(addr)]
- Implement unified punit set parsing and `parse_key_value` updates to support Punit ranges (e.g., `OpenMP.thread = (0-15)`).
- global_lexgion_default_config added to support default inheritance for new Lexgions.
- Enforce "definition before inheritance" rule to prevent invalid configurations.
- Add `test_config_parser.c` with tests for inheritance, complex ranges, and negative cases.
- Update `trace_config.c` and domain headers to integrate with the new parser.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ set(PINSIGHT_VERSION_MAJOR 0)
 set(PINSIGHT_VERSION_MINOR 1)
 set(PINSIGHT_VERSION ${PINSIGHT_VERSION_MAJOR}.${PINSIGHT_VERSION_MINOR})
 
-option(PINSIGHT_OPENMP       "Build with OpenMP support"       FALSE)
-option(PINSIGHT_MPI          "Build with MPI support"          FALSE)
+option(PINSIGHT_OPENMP       "Build with OpenMP support"       TRUE)
+option(PINSIGHT_MPI          "Build with MPI support"          TRUE)
 option(PINSIGHT_CUDA         "Build with CUDA support"         FALSE)
 option(PINSIGHT_ENERGY       "Build with Energy tracing"       FALSE)
 option(PINSIGHT_BACKTRACE    "Build with Backtrace enabled"    FALSE)
@@ -27,6 +27,7 @@ set(SOURCE_FILES
         src/bitset.c
         src/bitset.h
         src/trace_config.c
+    src/trace_config_parse.c
         src/trace_config.h
         src/trace_domain_dsl.h
         src/trace_domain_loader.h
@@ -56,7 +57,7 @@ endif()
 
 ## MPI implementation supporting PMPI
 if (PINSIGHT_MPI)
-#    find_package(MPI REQUIRED)
+    find_package(MPI REQUIRED)
     include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
     #list(APPEND PINSIGHT_EXTERNAL_LIBS ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
     list(APPEND SOURCE_FILES
@@ -150,3 +151,11 @@ else()
     message("Build with GNU BACKTRACE SUPPORT:  FALSE")
 endif()
 message("============================================================")
+add_executable(test_config_parser 
+    src/test_config_parser.c
+    src/trace_config_parse.c
+    src/trace_config.c
+    src/bitset.c
+    src/trace_domain_loader.c
+)
+target_link_libraries(test_config_parser ${CMAKE_DL_LIBS})
